@@ -3,6 +3,8 @@
   - Changed query method in Mojo::URL to merge with hash references and append
     with array references instead of the other way around. Because appended
     pairs should be able to preserve order.
+  - Changed template attribute in Mojolicious::Command to acivate vars by
+    default.
   - Removed test command.
   - Removed deprecated expect_close attribute from Mojo::Content.
   - Removed deprecated error and finish events from Mojo::IOLoop::Delay.
